--- a/Code.html
+++ b/Code.html
@@ -1,1 +1,9 @@
 <html>
+  <head>
+    <title>hello world</title>
+    <body bgcolor="blue">
+      <h1>header one</h1>
+   </body>
+  </head>
+</html>
+
